--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,14 +23,13 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-    <script src="./global.js"></script>
-    <script src="./weather.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <!-- load js here -->
+    <script src="./js/weather.js"></script>
+    <script src="./js/global.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
-
     <nav class="navbar navbar-light bg-white">
         <a href="#" class="navbar-brand">Fairfield Book</a>
         <form class="form-inline">
