--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,6 +43,7 @@
                     </button>
                 </div>
             </div>
+            <a href="Admin" class="nav-link">go to Admin</a>
         </form>
     </nav>
 
