--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -20,7 +20,7 @@
         <!-- Sign up form -->
         <section class="signup">
             <div class="container">
-                <div id="facehead">FACEBOOK</div>
+                <div id="facehead">FairFieldBook</div>
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
