--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,7 @@
     <script src="./js/advertisement.js"></script>
     <script src="./js/notification.js"></script>
     <script src="./js/profile.js"></script>
+    <script src="./js/getPosts.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
