--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,8 @@
     <script src="./js/notification.js"></script>
     <script src="./js/profile.js"></script>
     <script src="./js/getPosts.js"></script>
+    <script src="./js/sharePost.js"></script>
+    <script src="./js/uploadFile.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -109,7 +111,7 @@
                         </ul>
                     </div>
                     <div class="card-body">
-                        <div class="tab-content" id="myTabContent">
+                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="posts" role="tabpanel"
                                 aria-labelledby="posts-tab">
                                 <div class="form-group">
@@ -117,13 +119,15 @@
                                     <textarea class="form-control" id="message" rows="3"
                                         placeholder="What are you thinking?"></textarea>
                                 </div>
-
                             </div>
                             <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
                                 <div class="form-group">
                                     <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="customFile">
-                                        <label class="custom-file-label" for="customFile">Upload image</label>
+                                        <form id="uploadForm" name="uploadForm" method="POST" enctype="multipart/form-data" >
+                                            <input type="file" class="custom-file-input" id="customFile" name="myfile" accept="image/png, image/jpg, image/jpeg, image/gif" >
+                                        </form>
+                                        <label class="custom-file-label" for="customFile">Choose image</label>
+                                        <input id="imageName" type="hidden" name="imageName" value="" />
                                     </div>
                                 </div>
                                 <div class="py-4"></div>
@@ -131,7 +135,7 @@
                         </div>
                         <div class="btn-toolbar justify-content-between">
                             <div class="btn-group">
-                                <button type="submit" class="btn btn-primary">share</button>
+                                <button id="shareBtn" class="btn btn-primary">share</button>
                             </div>
                             <div class="btn-group">
                                 <button id="btnGroupDrop1" type="button" class="btn btn-link dropdown-toggle"
