--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,11 +24,11 @@
         crossorigin="anonymous"></script>
 
     <!-- load js here -->
+    <script src="./js/profile.js"></script>
     <script src="./js/weather.js"></script>
     <script src="./js/global.js"></script>
     <script src="./js/advertisement.js"></script>
     <script src="./js/notification.js"></script>
-    <script src="./js/profile.js"></script>
     <script src="./js/getPosts.js"></script>
     <script src="./js/sharePost.js"></script>
     <script src="./js/uploadFile.js"></script>
@@ -124,7 +124,7 @@
                             <div class="h5" id="Following"></div>
                         </li>
                         <li class="list-group-item">
-                            <button type="button" class="btn btn-outline-primary">&nbsp&nbsp&nbspbind twitter&nbsp&nbsp&nbsp</button>
+                            <button type="button" class="btn btn-outline-primary" id="bindtwitter">&nbsp&nbsp&nbspbind twitter&nbsp&nbsp&nbsp</button>
                         </li>
                         <li class="list-group-item">
                             <div class="input-group mb-1">
