--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -169,6 +169,9 @@
                                     <label class="sr-only" for="message">post</label>
                                     <textarea class="form-control" id="message" rows="3"
                                         placeholder="What are you thinking?"></textarea>
+                                    <div class="commit-tip">
+                                        <label id="tipLabel">Limited: 280</label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
@@ -186,7 +189,7 @@
                         </div>
                         <div class="btn-toolbar justify-content-between">
                             <div class="btn-group">
-                                <button id="shareBtn" class="btn btn-primary">share</button>
+                                <button id="shareBtn" class="btn btn-primary" >share</button>
                             </div>
                             <div class="btn-group">
                                 <button id="btnGroupDrop1" type="button" class="btn btn-link dropdown-toggle"
@@ -211,6 +214,23 @@
 
             <!-- ads -->
             <div class="col-md-3" id="adpanel">
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button id="tipCloseBtn" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                <!-- input content -->
+                </div>
             </div>
         </div>
     </div>
