--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-white">
-        <a href="#" class="navbar-brand">Fairfield Book</a>
+        <a href="#" class="navbar-brand" >Fairfield Book</a>
         <form class="form-inline">
             <div class="input-group">
                 <input type="text" class="form-control" aria-label="Recipient's username"
@@ -50,7 +50,6 @@
             </div>
         </form>
     </nav>
-
 
     <div class="container-fluid gedf-wrapper">
         <div class="row">
@@ -95,15 +94,11 @@
                                     </div>
                                     <br/>
                                     <div class="row">
-                                        <div class="col-sm-4">modify image</div>
-                                        <!--<img src="//placehold.it/100" class="rounded-circle" alt="avatar" id="popimage" class="col-xs-2">-->
-                                    </div>
-                                    <div class="row">
                                         <form id="uploadproimage" name="uploadproimage" method="POST" enctype="multipart/form-data" class="col-xs-2">
                                             <input type="file" id="myfile" name="myfile" value="modify avatar" accept="image/png, image/jpg, image/jpeg, image/gif" />
                                         </form>
                                         <img src="" id="proimageupload" class="rounded-circle" width="45">
-                                        <button id="proimgSubmit"  class="col-sm-4">upload picture</button>
+                                        <button id="proimgSubmit"  class="col-sm-4">modify photo</button>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
@@ -206,9 +201,6 @@
                     </div>
                 </div>
                 <!-- Post /////-->
-
-
-
 
             </div>
 
