--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,7 @@
                     </button>
                 </div>
             </div>
+            <button id="logout">Logout</button>
         </form>
     </nav>
 
