--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,8 @@
                     </button>
                 </div>
             </div>
-            <button id="logout">Logout</button>
+            <a href="LogoutController">logout</a>
+<!--            <button id="logout">Logout</button>-->
         </form>
     </nav>
 
@@ -202,7 +203,7 @@
                     </div>
                 </div>
                 <!-- Post /////-->
-
+                <div id="notification"></div>
             </div>
 
             <!-- ads -->
